deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store
  labels:
    app: store
spec:
  selector:
    app: store
  ports:
    - port: 80
      targetPort: 8080
      name: grpc
